--- a/rune-memory/Packages/manifest.json
+++ b/rune-memory/Packages/manifest.json
@@ -1,24 +1,25 @@
 {
   "dependencies": {
-    "com.unity.2d.animation": "7.0.9",
+    "com.unity.2d.animation": "9.0.3",
     "com.unity.2d.pixel-perfect": "5.0.3",
-    "com.unity.2d.psdimporter": "6.0.6",
+    "com.unity.2d.psdimporter": "8.0.2",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.2d.spriteshape": "7.0.6",
+    "com.unity.2d.spriteshape": "9.0.2",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.ads": "3.7.5",
-    "com.unity.analytics": "3.6.12",
-    "com.unity.collab-proxy": "1.17.7",
-    "com.unity.ide.rider": "3.0.16",
-    "com.unity.ide.visualstudio": "2.0.16",
+    "com.unity.ads": "4.4.2",
+    "com.unity.ai.navigation": "1.1.3",
+    "com.unity.analytics": "3.8.1",
+    "com.unity.collab-proxy": "2.0.5",
+    "com.unity.ide.rider": "3.0.24",
+    "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.inputsystem": "1.4.4",
-    "com.unity.services.analytics": "4.2.0",
+    "com.unity.inputsystem": "1.6.1",
+    "com.unity.services.analytics": "4.4.0",
     "com.unity.services.cloudsave": "2.0.1",
-    "com.unity.test-framework": "1.1.31",
+    "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.4",
-    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.2",
+    "com.unity.timeline": "1.7.4",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
